--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 14px;
+  background-color: #010201;
+  color: #f9f9f9;
 }
 
 code {
